; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/mshtml/extr_xmlhttprequest.c_variant_to_nsastr.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/mshtml/extr_xmlhttprequest.c_variant_to_nsastr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@S_OK = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [25 x i8] c"Unsupported VARIANT: %s\0A\00", align 1
@E_INVALIDARG = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32*)* @variant_to_nsastr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @variant_to_nsastr(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  store i32 %0, i32* %4, align 4
  store i32* %1, i32** %5, align 8
  %6 = call i32 @V_VT(i32* %4)
  switch i32 %6, label %16 [
    i32 128, label %7
    i32 129, label %7
    i32 130, label %7
    i32 131, label %11
  ]

7:                                                ; preds = %2, %2, %2
  %8 = load i32*, i32** %5, align 8
  %9 = call i32 @nsAString_Init(i32* %8, i32* null)
  %10 = load i32, i32* @S_OK, align 4
  store i32 %10, i32* %3, align 4
  br label %20

11:                                               ; preds = %2
  %12 = load i32*, i32** %5, align 8
  %13 = call i32 @V_BSTR(i32* %4)
  %14 = call i32 @nsAString_InitDepend(i32* %12, i32 %13)
  %15 = load i32, i32* @S_OK, align 4
  store i32 %15, i32* %3, align 4
  br label %20

16:                                               ; preds = %2
  %17 = call i32 @debugstr_variant(i32* %4)
  %18 = call i32 @FIXME(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0), i32 %17)
  %19 = load i32, i32* @E_INVALIDARG, align 4
  store i32 %19, i32* %3, align 4
  br label %20

20:                                               ; preds = %16, %11, %7
  %21 = load i32, i32* %3, align 4
  ret i32 %21
}

declare dso_local i32 @V_VT(i32*) #1

declare dso_local i32 @nsAString_Init(i32*, i32*) #1

declare dso_local i32 @nsAString_InitDepend(i32*, i32) #1

declare dso_local i32 @V_BSTR(i32*) #1

declare dso_local i32 @FIXME(i8*, i32) #1

declare dso_local i32 @debugstr_variant(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
